<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".As2CJHMDActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="21dp"
        android:text="@string/login1"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="41dp"
        android:text="@string/password"
        android:textSize="12sp" />

    <Button
        android:id="@+id/clear"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="22dp"
        android:layout_toRightOf="@+id/textView3"
        android:minHeight="20dp"
        android:text="@string/clear"
        android:textSize="12sp" />

    <Button
        android:id="@+id/okay"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/clear"
        android:layout_alignBottom="@+id/clear"
        android:layout_marginLeft="22dp"
        android:layout_toRightOf="@+id/clear"
        android:minHeight="20dp"
        android:text="@string/ok"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignRight="@+id/username"
        android:ems="10"
        android:inputType="textPassword"
    	android:text="@string/password1"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toLeftOf="@+id/X"
        android:ems="10"
        android:inputType="textPersonName"
		android:text="@string/username1"
        android:textSize="12sp" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/X"
        android:layout_marginTop="26dp"
        android:text="@string/username"
        android:textSize="12sp" />

    <Button
        android:id="@+id/X"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:minHeight="20dp"
        android:minWidth="20dp"
        android:text="@string/X"
        android:textSize="12sp"
        android:textColor="#FFFFFF"
        android:background="#FF0000" />

</RelativeLayout>