<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".As2CJHMDActivity" >

    <Button
        android:id="@+id/X"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="17dp"
        android:background="#FF0000"
        android:minHeight="20dp"
        android:minWidth="20dp"
        android:text="@string/X"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/X"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="114dp"
        android:minHeight="20dp"
        android:text="@string/exit"
        android:textSize="12sp" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="29dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:checked="false"
            android:text="@string/bankTransactionButton"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/changePassword"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/radioGroup1"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="50dp"
        android:text="@string/clickButton"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/X"
        android:layout_marginLeft="61dp"
        android:text="@string/login2"
        android:textSize="12sp" />

</RelativeLayout>