<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".As2CJHMDActivity" >

    <Button
        android:id="@+id/X"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="23dp"
        android:layout_marginTop="17dp"
        android:background="#FF0000"
        android:minHeight="20dp"
        android:minWidth="20dp"
        android:text="@string/X"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="26dp"
        android:text="@string/newPassword"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/currentPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_alignRight="@+id/X"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/currentPassword"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <Button
        android:id="@+id/confirm"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newPassword"
        android:layout_marginTop="87dp"
        android:layout_toLeftOf="@+id/X"
        android:minHeight="20dp"
        android:text="@string/ok"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPassword"
        android:layout_below="@+id/newPassword"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirmPassword"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/confirmPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginRight="17dp"
        android:layout_marginTop="36dp"
        android:layout_toLeftOf="@+id/currentPassword"
        android:text="@string/currentPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/X"
        android:layout_marginRight="17dp"
        android:layout_toLeftOf="@+id/confirm"
        android:text="@string/changePasswordTitle"
        android:textSize="12sp"  />

</RelativeLayout>